tests/neg-custom-args/fatal-warnings/enum-variance.check
-- Error: tests/neg-custom-args/fatal-warnings/enum-variance.scala:2:12 ------------------------------------------------
2 |  case Refl(f: T => T) // error: covariant T in contravariant position... enum case may require explicit type parameters
  |            ^^^^^^^^^
  |            covariant type T occurs in contravariant position in type T => T of value f
  |            enum case class Refl may require explicit type parameters to resolve this issue
